# inceptor

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md
examples/: example.cc
include/inceptor/: inceptor.h
